Sets --add-opens arg when running on java 11